add water swagger post
